--- a/code/src/AppBundle/Resources/views/Upload_xml.html.twig
+++ b/code/src/AppBundle/Resources/views/Upload_xml.html.twig
@@ -238,7 +238,7 @@
       <button type="submit">Importar</button>  
     </form>
     <form  action="{{path('export_xml') }}" method="post" enctype="multipart/form-data" style="padding-top: 1rem;">
-    <input type="text" id="fileName" placeholder="Nombre del Archivo"/>
+    <input type="text" name="fileName" placeholder="Nombre del Archivo"/>
       <button>Exportar</button>
     </form>
   </div>
